[package]
name = "super_sol"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "=1.18"
solana-program = "=1.18"
solana-sdk = "=1.18"
anyhow = "1.0.95"
ahash = "0.8.11"
bincode = "1.3.3"
serde_json = "1.0.138"
serde = "1.0.217"
serde_bytes = "0.11.15"
spl-memo = "=4.0.0"
anchor-lang = "0.29.0"
lazy_static = "1.5.0"
anchor-gen = "0.3.1"
pyth-sdk-solana = "0.10.3"
spl-token = "=4.0.0"
rust_decimal = { version = "1.36.0", features = ["maths"] }
num-traits = "0.2.19"
spl-associated-token-account = "2.0.0"
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "=0.11.27", features = ["json"] }
base64 = "0.22.1"
tokio = "1.43.0"
rand = "0.9.0"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[patch.crates-io]
